tests/variant_flow/coverage_unknown_variant_still_reported_and_missing_still_fires.err.expected
error: at 5:17: [TC-SwitchArmUnknownVariant] In function 'f', block 'entry': variant 'Wat' is not part of enum 'Option'
   |
 5 |                 switchEnum(o) [Wat: end]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^
error: at 5:17: [VF-SwitchNotExhaustive] In function 'f', block 'entry': switchEnum on 'Option' does not handle variant 'None'
   |
 5 |                 switchEnum(o) [Wat: end]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^
error: at 5:17: [VF-SwitchNotExhaustive] In function 'f', block 'entry': switchEnum on 'Option' does not handle variant 'Some'
   |
 5 |                 switchEnum(o) [Wat: end]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^
